// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`effective-merged acceptance (B2b) > resolves examples/a2a/.gsloth.config.json to a stable effective config 1`] = `
{
  "a2aAgents": {
    "timeAgent": {
      "agentId": "hello-time-agent",
      "agentUrl": "http://localhost:8080/a2a",
    },
  },
  "aiignore": {
    "enabled": true,
    "patterns": undefined,
  },
  "builtInTools": [
    "gth_checklist",
    "gth_grep",
  ],
  "canInterruptInferenceWithEsc": false,
  "commands": {
    "api": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "cors": {
        "allowHeaders": "Content-Type, Accept",
        "allowMethods": "POST, GET, OPTIONS",
        "allowOrigin": "http://localhost:3000",
      },
      "filesystem": "read",
      "port": 3000,
    },
    "ask": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "chat": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "code": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "exec": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "pr": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "contentSource": "github",
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
      "requirementSource": "github",
    },
    "review": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
    },
  },
  "consoleLevel": 1,
  "contentSource": "file",
  "debugLog": false,
  "filesystem": "none",
  "includeCurrentDateAfterGuidelines": false,
  "llm": {
    "location": "global",
    "model": "gemini-3-pro-preview",
    "type": "vertexai",
  },
  "requirementSource": "file",
  "streamOutput": true,
  "streamSessionInferenceLog": true,
  "useColour": true,
  "writeBinaryOutputsToFile": true,
  "writeOutputToFile": false,
}
`;

exports[`effective-merged acceptance (B2b) > resolves examples/jira-mcp/.gsloth.config.json to a stable effective config 1`] = `
{
  "aiignore": {
    "enabled": true,
    "patterns": undefined,
  },
  "builtInTools": [
    "gth_checklist",
    "gth_grep",
  ],
  "canInterruptInferenceWithEsc": false,
  "commands": {
    "api": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "cors": {
        "allowHeaders": "Content-Type, Accept",
        "allowMethods": "POST, GET, OPTIONS",
        "allowOrigin": "http://localhost:3000",
      },
      "filesystem": "read",
      "port": 3000,
    },
    "ask": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "chat": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "code": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "exec": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "pr": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "contentSource": "github",
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
      "requirementSource": "jira",
    },
    "review": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
    },
  },
  "consoleLevel": 1,
  "contentSource": "file",
  "debugLog": false,
  "filesystem": "none",
  "includeCurrentDateAfterGuidelines": false,
  "llm": {
    "model": "gemini-2.5-pro",
    "type": "vertexai",
  },
  "mcpServers": {
    "jira": {
      "authProvider": "OAuth",
      "transport": "sse",
      "url": "https://mcp.atlassian.com/v1/sse",
    },
  },
  "requirementSource": "file",
  "requirementSourceConfig": {
    "jira": {
      "cloudId": "YOURCLOUDID",
      "displayUrl": "https://YOURDOMAIN.atlassian.net/browse/",
    },
  },
  "streamOutput": true,
  "streamSessionInferenceLog": true,
  "useColour": true,
  "writeBinaryOutputsToFile": true,
  "writeOutputToFile": false,
}
`;

exports[`effective-merged acceptance (B2b) > resolves examples/lmstudio/.gsloth.config.json to a stable effective config 1`] = `
{
  "aiignore": {
    "enabled": true,
    "patterns": undefined,
  },
  "builtInTools": [
    "gth_checklist",
    "gth_grep",
  ],
  "canInterruptInferenceWithEsc": false,
  "commands": {
    "api": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "cors": {
        "allowHeaders": "Content-Type, Accept",
        "allowMethods": "POST, GET, OPTIONS",
        "allowOrigin": "http://localhost:3000",
      },
      "filesystem": "read",
      "port": 3000,
    },
    "ask": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "chat": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "code": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "exec": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "pr": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "contentSource": "github",
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
      "requirementSource": "github",
    },
    "review": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
    },
  },
  "consoleLevel": 1,
  "contentSource": "file",
  "debugLog": false,
  "filesystem": "none",
  "includeCurrentDateAfterGuidelines": false,
  "llm": {
    "apiKey": "none",
    "configuration": {
      "baseURL": "http://127.0.0.1:1234/v1",
    },
    "model": "openai/gpt-oss-20b",
    "type": "openai",
  },
  "requirementSource": "file",
  "streamOutput": true,
  "streamSessionInferenceLog": true,
  "useColour": true,
  "writeBinaryOutputsToFile": true,
  "writeOutputToFile": false,
}
`;

exports[`effective-merged acceptance (B2b) > resolves examples/simple-DIY-helper/.gsloth.config.json to a stable effective config 1`] = `
{
  "aiignore": {
    "enabled": true,
    "patterns": undefined,
  },
  "builtInTools": [
    "gth_checklist",
    "gth_grep",
  ],
  "canInterruptInferenceWithEsc": false,
  "commands": {
    "api": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "cors": {
        "allowHeaders": "Content-Type, Accept",
        "allowMethods": "POST, GET, OPTIONS",
        "allowOrigin": "http://localhost:3000",
      },
      "filesystem": "read",
      "port": 3000,
    },
    "ask": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "chat": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "read",
    },
    "code": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "exec": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "all",
    },
    "pr": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "contentSource": "github",
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
      "requirementSource": "github",
    },
    "review": {
      "builtInTools": [
        "gth_checklist",
        "gth_grep",
      ],
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
    },
  },
  "consoleLevel": 1,
  "contentSource": "file",
  "debugLog": false,
  "filesystem": "none",
  "includeCurrentDateAfterGuidelines": false,
  "llm": {
    "model": "deepseek-reasoner",
    "type": "deepseek",
  },
  "requirementSource": "file",
  "streamOutput": true,
  "streamSessionInferenceLog": true,
  "useColour": true,
  "writeBinaryOutputsToFile": true,
  "writeOutputToFile": false,
}
`;

exports[`effective-merged acceptance (B2b) > resolves the consumer-shaped fixture to a stable effective config 1`] = `
{
  "aiignore": {
    "enabled": true,
    "patterns": undefined,
  },
  "builtInTools": [
    "show_a2ui_surface",
  ],
  "canInterruptInferenceWithEsc": false,
  "commands": {
    "api": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "cors": {
        "allowHeaders": "Content-Type, Accept",
        "allowMethods": "POST, GET, OPTIONS",
        "allowOrigin": "http://localhost:5555",
      },
      "filesystem": "read",
      "port": 3000,
    },
    "ask": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "filesystem": "read",
    },
    "chat": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "filesystem": "read",
    },
    "code": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "filesystem": "all",
    },
    "exec": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "filesystem": "all",
    },
    "pr": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "contentSource": "github",
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
      "requirementSource": "github",
    },
    "review": {
      "builtInTools": [
        "show_a2ui_surface",
      ],
      "filesystem": "none",
      "rating": {
        "enabled": true,
        "errorOnReviewFail": true,
        "maxRating": 10,
        "minRating": 0,
        "passThreshold": 6,
      },
    },
  },
  "consoleLevel": 1,
  "contentSource": "file",
  "debugLog": false,
  "filesystem": "none",
  "includeCurrentDateAfterGuidelines": false,
  "llm": {
    "configuration": {
      "temperature": 0.7,
    },
    "model": "gpt-5.4",
    "type": "openai",
  },
  "requirementSource": "file",
  "streamOutput": true,
  "streamSessionInferenceLog": true,
  "useColour": true,
  "writeBinaryOutputsToFile": true,
  "writeOutputToFile": false,
}
`;
